# ai_agentswarm

./: .env.example  .git_e2e_out.txt  .gitattributes  .gitignore  CONTRIBUTING.md  INFO.txt  LICENSE  README.md  ROADMAP.md  ROADMAP_CHANGES.md  ROADMAP_DISTRIBUTED_CLIENTS.md  git_sandbox_test_out.txt  git_vol_test_out.txt
agents/: README.md  pyproject.toml
agents/src/agentswarm_agents/: __init__.py  capsule_executor.py  check_goal.py  client.py  client_data_dir.py  coordinator_planner.py  create_task.py  demo.py  deploy_demo.py  dispatch_client.py  docker_worker.py  engineering_goal.py  engineering_lab.py  engineering_workspace.py  federation_demo.py  forge_ssh.py  git_capsule.py  git_sandbox_executor.py  goal_run_log.py  identity.py  llama_io.py  memory_keys.py  model_allowlist.json  model_allowlist.py  model_store.py  ollama_executor.py  outcome_bundle.py  owner_auth.py  replay_goal.py  sandbox_executor.py  sandbox_security.py  solve.py  start_task.py  swarm_supervisor.py  task_file.py  volunteer_capabilities.py  volunteer_client.py  volunteer_executor.py  volunteer_gui.py  volunteer_team.py  (+4 more)
agents/src/agentswarm_agents/content/: __init__.py  rss.py  text.py
agents/src/agentswarm_agents/workers/: __init__.py  classifier.py  codewriter.py  deployer.py  moderator.py  orchestrator.py  planner.py  reviewer.py  scraper.py  summarizer.py  tester.py
agents/tests/: conftest.py  dispatch_e2e_support.py  test_capsule_executor.py  test_client_memory.py  test_codewriter.py  test_content_agents.py  test_coordinator_planner.py  test_create_task.py  test_deploy_demo.py  test_deployer.py  test_docker_worker.py  test_engineering_lab.py  test_engineering_workspace.py  test_federation_demo.py  test_forge_ssh.py  test_git_capsule.py  test_git_sandbox_executor.py  test_goal_run_log.py  test_identity.py  test_llama_io.py  test_memory_keys.py  test_model_allowlist.py  test_model_store.py  test_moderator.py  test_ollama_coordinator.py  test_ollama_executor.py  test_orchestrator.py  test_outcome_bundle.py  test_phase3_agents.py  test_planner.py  test_replay_goal.py  test_sandbox_docker_cmd.py  test_sandbox_executor.py  test_sandbox_security.py  test_solve.py  test_start_task.py  test_swarm_supervisor.py  test_task_file.py  test_task_pool_chain_e2e.py  test_volunteer_capabilities.py  (+6 more)
apps/agentswarm-task-console/: Cargo.toml
apps/agentswarm-task-console/src/: main.rs
client/: AgentSwarmVolunteer.spec  FRIEND_README.txt
config/: news-feeds.json
docs/: README.md  agents.md  api.md  architecture.md  credibility-spec.md  deploy.md  development.md  dispatch-migration.md  execution-plan.md  getting-started.md  glossary.md  oauth-setup.md  overview.md  pilot-news-hub.md  production-hardening.md  quickstart-deploy.md  quickstart-external-agent.md  quickstart-federation.md  quickstart-swarm-pipeline.md  status.md  task-workflow.md  volunteer-client.md  volunteer-hardware.md
pilot/: index.html
platform/: README.md  pyproject.toml
platform/src/agentswarm_platform/: __init__.py  agent_versioning.py  artifact_store.py  assignment_config.py  assignment_signing.py  assignment_wait.py  auth.py  bounty.py  budgets.py  canary.py  canary_store.py  capabilities.py  content_pipeline.py  coordinator_config.py  coordinator_plan.py  credibility.py  credibility_gamification.py  credibility_ledger.py  credibility_transfer.py  credit_pricing.py  credits_ledger.py  crypto.py  deploy_policy.py  deploy_store.py  deps.py  dispatch_store.py  dispatcher.py  forge_deploy_keys.py  forge_store.py  forge_types.py  git_store.py  goal_artifacts.py  goal_trace.py  governance_templates.py  hardware_gates.py  main.py  memory_policy.py  memory_store.py  model_allowlist.py  models.py  (+16 more)
platform/src/agentswarm_platform/data/: capabilities.json  model_allowlist.json
platform/src/agentswarm_platform/templates/governance/: minimal.json  news-hub.json
platform/tests/: conftest.py  test_agent_profile.py  test_agent_versioning.py  test_artifacts_and_forge.py  test_assignment_long_poll.py  test_assignment_wait.py  test_auth.py  test_budgets.py  test_builder_compile_submit.py  test_canary.py  test_capabilities.py  test_check_pages_ready.py  test_close_p0_7.py  test_content_pipeline.py  test_content_pipeline_flow.py  test_coordinator_config.py  test_coordinator_decompose.py  test_coordinator_plan.py  test_creative_appeal.py  test_creative_subjective.py  test_credibility_decay.py  test_credibility_gamification.py  test_credibility_ledger.py  test_credibility_projects.py  test_credibility_public_config.py  test_credibility_sim.py  test_credibility_tiers.py  test_credibility_transfer.py  test_credit_pricing.py  test_demo_volunteer_subjective.py  test_deploy_signoff.py  test_deploy_staging_helpers.py  test_dispatch.py  test_dispatch_capacity.py  test_engineering_goal.py  test_forge_types.py  test_git_patch.py  test_goal_deploy_bridge.py  test_goal_trace_unit.py  test_governance.py  (+42 more)
(+256 files in other folders)
