[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentswarm-agents"
version = "0.3.0"
description = "AgentSwarm Phase 0 reference agents"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "cryptography>=43.0.0",
    "agentswarm-platform>=0.1.0",
]

[project.scripts]
agentswarm-codewriter = "agentswarm_agents.workers.codewriter:main"
agentswarm-tester = "agentswarm_agents.workers.tester:main"
agentswarm-reviewer = "agentswarm_agents.workers.reviewer:main"
agentswarm-deployer = "agentswarm_agents.workers.deployer:main"
agentswarm-demo = "agentswarm_agents.demo:main"
agentswarm-demo-federation = "agentswarm_agents.federation_demo:main"
agentswarm-deploy-demo = "agentswarm_agents.deploy_demo:main"
agentswarm-volunteer = "agentswarm_agents.volunteer_gui:main"

[tool.setuptools.package-data]
agentswarm_agents = ["model_allowlist.json"]

[tool.setuptools.packages.find]
where = ["src"]
