[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentswarm-agents"
version = "0.3.0"
description = "AgentSwarm Phase 0 reference agents"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "cryptography>=43.0.0",
    "agentswarm-platform>=0.1.0",
]

[project.scripts]
agentswarm-codewriter = "agentswarm_agents.workers.codewriter:main"
agentswarm-tester = "agentswarm_agents.workers.tester:main"
agentswarm-reviewer = "agentswarm_agents.workers.reviewer:main"
agentswarm-classifier = "agentswarm_agents.workers.classifier:main"
agentswarm-scraper = "agentswarm_agents.workers.scraper:main"
agentswarm-summarizer = "agentswarm_agents.workers.summarizer:main"
agentswarm-planner = "agentswarm_agents.workers.planner:main"
agentswarm-orchestrator = "agentswarm_agents.workers.orchestrator:main"
agentswarm-moderator = "agentswarm_agents.workers.moderator:main"
agentswarm-deployer = "agentswarm_agents.workers.deployer:main"
agentswarm-swarm = "agentswarm_agents.swarm_supervisor:main"
agentswarm-demo = "agentswarm_agents.demo:main"
agentswarm-demo-federation = "agentswarm_agents.federation_demo:main"
agentswarm-deploy-demo = "agentswarm_agents.deploy_demo:main"
agentswarm-volunteer = "agentswarm_agents.volunteer_gui:main"
agentswarm-solve = "agentswarm_agents.solve:main"
agentswarm-create-task = "agentswarm_agents.create_task:main"
agentswarm-start-task = "agentswarm_agents.start_task:main"
agentswarm-replay-goal = "agentswarm_agents.replay_goal:main"

[tool.setuptools.package-data]
agentswarm_agents = ["model_allowlist.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "dispatch_e2e: live uvicorn dispatch platform + VolunteerClient integration",
]
